# Talentum

./: LICENSE  README.md  env.example  manage.py  pyproject.toml  pytest.ini
Talentum/: asgi.py  settings.py  urls.py  wsgi.py
apps/accounts/: models.py  serializers.py  test_accounts.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_user_created_at_user_is_email_verified_and_more.py  0003_user_role.py
apps/companies/: __init__.py  admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/companies/migrations/: 0001_initial.py
docs/: Talentum_API.postman_collection.json
