[project]
name = "talentum"
version = "0.1.0"
description = "Enterprise-grade Company Management System — secure, workflow-driven, and built for managing talent, structure, and performance."
authors = [
    {name = "Ahmad Zakaria",email = "azsharkawy5@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "djangorestframework-simplejwt (>=5,<6)",
    "django-cors-headers (>=4,<5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
